Fix input spacing on mobile

--- a/app/_sass/components/_input-hoshi.sass
+++ b/app/_sass/components/_input-hoshi.sass
@@ -1,6 +1,8 @@
 .InputHoshi
   position: relative
   display: inline-block
+  +media-xs-only
+    margin-top: $space-small
 
 .InputHoshi-field
   position: relative
